XACT-1019 - settings page api callout and styles

--- a/client/styles/main.scss
+++ b/client/styles/main.scss
@@ -1,3 +1,16 @@
 $asset-path-root: '/node_modules/shamrock/src/';
 
 @import '../node_modules/shamrock/src/styles/shamrock';
+
+.sr-card-api-callout {
+  @extend .sr-card;
+  background-color: rgba($brand-green, .3);
+  padding-left: 10px;
+  padding-bottom: 10px;
+  margin: 30px;
+}
+
+.icon-life_bouy-float-right {
+  @extend .icon-life-bouy;
+  float: right;
+}
