XACT-1019 - float left for now and update tests

--- a/client/styles/main.scss
+++ b/client/styles/main.scss
@@ -5,11 +5,10 @@ $asset-path-root: '/node_modules/shamrock/src/';
 .sr-card-api-callout {
   @extend .sr-card;
   background-color: rgba($brand-green, .3);
-  padding-left: 10px;
-  padding-bottom: 10px;
   margin: 30px;
 }
 
 .icon-life-preserver-api-callout {
   @extend .icon-life-bouy;
+  float: left;
 }
